# payment-processing-platform

./: .gitignore  README.md  create-topics.sh  docker-compose.yml  init.sql
fraud-detection-service/: Dockerfile  README.md  build.sbt
fraud-detection-service/src/main/scala/: FraudDetectionService.scala  KafkaConfig.scala  Main.scala
fraud-detection-service/src/main/scala/models/: Payment.scala
notification-service/: Dockerfile  README.md  go.mod  kafka.go  main.go  notifier.go
payment-service/: Dockerfile  README.md  pom.xml
payment-service/resources/: application.properties
payment-service/src/main/java/dev/barcelos/payment_service/: App.java
payment-service/src/main/java/dev/barcelos/payment_service/config/: AuditConfig.java  JacksonConfig.java  KafkaProducerConfig.java
payment-service/src/main/java/dev/barcelos/payment_service/controller/: PaymentController.java
payment-service/src/main/java/dev/barcelos/payment_service/dto/: ApiResponse.java
payment-service/src/main/java/dev/barcelos/payment_service/exception/: GlobalExceptionHandler.java
payment-service/src/main/java/dev/barcelos/payment_service/model/: Payment.java  PaymentMethod.java  PaymentRequest.java
payment-service/src/main/java/dev/barcelos/payment_service/repository/: PaymentRepository.java
payment-service/src/test/java/dev/barcelos/payment_service/: AppTest.java
settlement-service/: Cargo.toml  Dockerfile  README.md
settlement-service/src/: kafka.rs  main.rs  settlement.rs
webapp/: nginx.conf
webapp/html/: index.html  script.js  style.css
