[package]
name = "settlement-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.30", features = ["full"] }
rdkafka = { version = "0.36.2", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.5"
chrono = "0.4"

# Binário executável
[[bin]]
name = "settlement-service"
path = "src/main.rs"